commit banco de dados e swagger
